Refactor CI workflow to streamline linting and formatting process by removing separate lint command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,7 @@ jobs:
           done
 
       - name: Lint & Format
-        run: |
-          npm run lint
-          npm run format
+        run: npm run format
 
       - name: Build
         run: npm run build
