--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI Workflow
 
 on:
   push:
-    branches: ['main', 'staging']
+    branches: ["main", "staging"]
   pull_request:
-    branches: ['*']
+    branches: ["*"]
 
 env:
   STELLAR_SERVER_URL: ${{ secrets.STELLAR_SERVER_URL }}
@@ -16,9 +16,17 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
+        toolchain:
+          - stable
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install wasm32-unknown-unknown target
+        run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup target add wasm32-unknown-unknown
+
+      - name: Install Stellar CLI
+        uses: stellar/stellar-cli@v22.5.0
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
