--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,15 +13,25 @@ jobs:
         if: ${{ github.event.workflow_run.conclusion == 'success' }}
         runs-on: ubuntu-latest
         permissions:
-            contents: read
+            contents: write
             id-token: write
         steps:
             - uses: actions/checkout@v4
+              with:
+                fetch-depth: 0
             - uses: actions/setup-node@v4
               with:
                 node-version: "20"
                 registry-url: 'https://registry.npmjs.org'
+            - name: Git Identity
+              run: |
+                git config --global user.name 'github-actions[bot]'
+                git config --global user.email 'github-actions[bot]@users.noreply.github.com'
             - run: npm ci
+            - name: Bump version
+              run: |
+                npm version patch -m "chore: release %s [skip ci]"
+                git push --follow-tags
             - run: npm publish --provenance --access public
               env:
                 NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
