--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,9 +12,7 @@ jobs:
   publish:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
+    permissions: write-all
     strategy:
       matrix:
         toolchain: [1.86.0]
@@ -47,6 +45,6 @@ jobs:
         run: |
           npm version patch -m "chore: release %s [skip ci]"
           git push --follow-tags
-      - run: npm publish --provenance --access public
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
